fix: z-index

--- a/src/app/brainstorming/brainstorming-presenter/brainstorming-presenter.component.css
+++ b/src/app/brainstorming/brainstorming-presenter/brainstorming-presenter.component.css
@@ -12,7 +12,7 @@
   border-bottom-right-radius: 60px 5px;
   transition: box-shadow 200ms cubic-bezier(0, 0, 0.2, 1);
   position: relative;
-  z-index: 1;
+  z-index: 2;
   overflow: hidden;
 }
 
@@ -27,6 +27,7 @@
   position: relative;
   width: 250px;
   height:250px;
+  z-index:2;
 }
 
 .shadow {
@@ -91,6 +92,7 @@
 .icon-container a {
   margin-right: 25px;
   color: black;
+  z-index:2;
 }
 
 .icon-container a:hover i {
